--- a/index.html
+++ b/index.html
@@ -6,6 +6,41 @@
     <title>Library</title>
 </head>
 <body>
+    <h1>Book Library</h1>
+    <form id="book-form">
+        <div>
+            <label for="title">Title</label>
+            <input type="text" id="title">
+        </div>
+        <div>
+            <label for="author">Author</label>
+            <input type="text" id="author">
+        </div>
+        <div>
+            <label for="pages">Pages</label>
+            <input type="number" id="pages">
+        </div>
+        <button type="submit">Add Book</button>
+    </form>
+
+    <table>
+        <thead>
+            <tr>
+                <th>Title</th>
+                <th>Author</th>
+                <th># Pages</th>
+                <th>Read or Not</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td>Harry Porter</td>
+                <td>JK Rowlings</td>
+                <td>1000</td>
+                <td>No</td>
+            </tr>
+        </tbody>
+    </table>
     <script src="app.js"></script>
 </body>
 </html>
