Add view for new books

--- a/index.html
+++ b/index.html
@@ -32,13 +32,8 @@
                 <th>Read or Not</th>
             </tr>
         </thead>
-        <tbody>
-            <tr>
-                <td>Harry Porter</td>
-                <td>JK Rowlings</td>
-                <td>1000</td>
-                <td>No</td>
-            </tr>
+        <tbody id="book-table">
+
         </tbody>
     </table>
     <script src="app.js"></script>
