--- a/index.html
+++ b/index.html
@@ -20,6 +20,11 @@
             <label for="pages">Pages</label>
             <input type="number" id="pages">
         </div>
+        <div>
+            <label for="pages">read</label>
+            <input type="checkbox" id="checkbox">
+        </div>
+
         <button type="submit">Add Book</button>
     </form>
 
