Update styles for form and table

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 <input type="number" id="pages">
             </div>
             <div>
-                <label for="pages">read</label>
+                <label for="pages">Read</label>
                 <input type="checkbox" id="checkbox">
             </div>
 
